<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#aa000000"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@id/myshoppopwinlinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15.0"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:background="#fff0f8ff"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:layout_weight="1.0"
            android:background="#fff0f8ff"
            android:gravity="bottom|left|center"
            android:paddingBottom="7.0dip"
            android:paddingLeft="17.0dip"
            android:text="@string/shareto"
            android:textColor="#ff333333" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3.0"
            android:background="#fff0f8ff"
            android:gravity="top|center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/llayout_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@id/img_share_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.0"
                    android:background="@drawable/qq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:paddingTop="3.0dip"
                    android:text="@string/qqfriend"
                    android:textColor="#ff333333" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@id/img_share_wx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.0"
                    android:background="@drawable/weixin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:paddingTop="3.0dip"
                    android:text="@string/weixinfriend"
                    android:textColor="#ff333333" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@id/img_share_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.0"
                    android:background="@drawable/duanxin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2.0dip"
                    android:layout_weight="1.0"
                    android:paddingTop="3.0dip"
                    android:text="@string/shoujiduanxin"
                    android:textColor="#ff333333" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_weixin_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@id/img_share_wxf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.0"
                    android:background="@drawable/pyq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:paddingTop="3.0dip"
                    android:text="@string/pengyouquan"
                    android:textColor="#ff333333" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>